--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -16,3 +16,24 @@
     </div>
   </div>
 </mat-toolbar>
+
+<!-- <header class="main-header">
+  <span class="align-center">r1c1</span>
+  <div id="banner" class="align-center" (mouseenter)="showGreeting()" (mouseleave)="hideGreeting()">r1c2</div>
+  <div class="align-center">r1c3</div>
+</header> -->
+
+<mat-toolbar color="accent" class="row-one">
+  <mat-toolbar-row>
+    <div class="container-padding">
+      <span>r1c1</span>
+    </div>
+    <div (mouseleave)="resetGreeting()" (mouseenter)="showGreeting()" id="r1c2" class="container-padding">
+    </div>
+    <div class="container-padding">
+      <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
+      <!-- <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon> -->
+
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
