--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,9 +1,80 @@
+<!-- <div class="row-two">
+  <div class="container-padding">
+    r2c1
+  </div>
+  
+  <div class="container-padding">
+    <router-outlet class="main-outlet"></router-outlet>
+  </div>
+  
+  <div class="container-padding">
+    r2c3
+  </div>
+</div> -->
+
 <div class="row-two">
   <div class="container-padding">
     r2c1
   </div>
   <div class="container-padding">
-     <router-outlet class="main-outlet"></router-outlet>
+    <!-- <button type="button" class="btn btn-primary">Primary</button>
+   <button type="button" class="btn btn-secondary">Secondary</button>
+   <button type="button" class="btn btn-success">Success</button> -->
+    <!-- <button type="button" class="btn btn-warning">Warning</button>
+   <button type="button" class="btn btn-info">Info</button>
+   <button type="button" class="btn btn-light">Light</button>
+   <button type="button" class="btn btn-dark">Dark</button> -->
+    <table class="table">
+      <thead class="thead-dark">
+
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">First Name</th>
+          <th scope="col">Last Name</th>
+          <th scope="col">Courses</th>
+          <th>
+            <div class="btn-group pull-right">
+              <button type="button" mat-raised-button color="accent" (click)="saveStudent()">
+                <mat-icon>save_edit</mat-icon>
+              </button>
+              <button type="button" mat-raised-button color="warn" [disabled]="disableAddButton"(click)="addStudent()">
+                <mat-icon>create</mat-icon>
+
+              </button>
+            </div>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let student of studentArray: let i = index">
+          <th *ngIf="!student.editMode" scope="row">{{student.id}}</th>
+          <td *ngIf="student.editMode === false">{{student.firstName}}</td>
+          <td *ngIf="student.editMode === false">{{student.lastName}}</td>
+          <td *ngIf="student.editMode === false">{{student.course}}</td>
+
+          <th *ngIf="student.editMode" scope="row">
+            <input [(ngModel)]="student.id" type="text" class="form-control" placeholder="ID">
+          </th>
+          <td *ngIf="student.editMode">
+            <input [(ngModel)]="student.firstName" type="text" class="form-control" placeholder="First Name">
+          </td>
+          <td *ngIf="student.editMode">
+            <input [(ngModel)]="student.lastName" type="text" class="form-control" placeholder="Last Name">
+          </td>
+          <td *ngIf="student.editMode">
+            <input [(ngModel)]="student.course" type="text" class="form-control" placeholder="Course">
+          </td>
+
+
+          <td>
+            <button type="button" class="pull-right" mat-raised-button color="warn" (click)="removeStudent(i)">
+                <mat-icon svgIcon ="delete_sweep"></mat-icon>
+            </button>
+          </td>
+
+        </tr>
+      </tbody>
+    </table>
   </div>
   <div class="container-padding">
     r2c3
