--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -23,7 +23,7 @@
   <div class="align-center">r1c3</div>
 </header> -->
 
-<mat-toolbar color="accent" class="row-one">
+<!-- <mat-toolbar color="accent" class="row-one">
   <mat-toolbar-row>
     <div class="container-padding">
       <span>r1c1</span>
@@ -32,7 +32,7 @@
     </div>
     <div class="container-padding">
       <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
-      <!-- <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon> -->
+      <mat-icon class="example-icon" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon> -->
 
     </div>
   </mat-toolbar-row>
